incorporating Marielle & Ty's edits

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -8181,6 +8181,12 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\F5V5R8H8\\nph.html}
 }
 
+@online{SeasonalDroughtRelateda,
+  title = {Seasonal and Drought‐related Changes in Leaf Area Profiles Depend on Height and Light Environment in an {{Amazon}} Forest - {{Smith}} - 2019 - {{New Phytologist}} - {{Wiley Online Library}}},
+  url = {https://nph.onlinelibrary.wiley.com/doi/full/10.1111/nph.15726},
+  urldate = {2021-08-04}
+}
+
 @article{seiwaChangesLeafPhenology1999,
   title = {Changes in {{Leaf Phenology}} Are {{Dependent}} on {{Tree Height inAcer}} Mono, a {{Deciduous Broad}}-Leaved {{Tree}}},
   author = {Seiwa, K},
@@ -8777,6 +8783,18 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\6D92GHIM\\Smith et al. - 2019 - Seasonal and drought-related changes in leaf area .pdf;C\:\\Users\\Me\\Zotero\\storage\\G28NHDFI\\nph.html}
 }
 
+@article{smithSeasonalDroughtrelatedChanges2019a,
+  title = {Seasonal and Drought-Related Changes in Leaf Area Profiles Depend on Height and Light Environment in an {{Amazon}} Forest},
+  author = {Smith, Marielle N and Stark, Scott C and Taylor, Tyeen C and Ferreira, Mauricio L and de Oliveira, Eronaldo and Restrepo-Coupe, Natalia and Chen, Shuli and Woodcock, Tara and Figueira, Michela and de Camargo, Plinio B and de Oliveira, Raimundo C and Falk, Donald A and McMahon, Sean M and Huxman, Travis E and Saleska, Scott R},
+  options = {useprefix=true},
+  date = {2019},
+  journaltitle = {New Phytologist},
+  pages = {37},
+  abstract = {Seasonal dynamics in the vertical distribution of leaf area index (LAI) may impact the seasonality of forest productivity in Amazonian forests. However, until recently, fine-scale observations critical to revealing ecological mechanisms underlying these changes have been lacking.},
+  langid = {english},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\MBXEV7IK\\Smith et al. - 2019 - Seasonal and drought-related changes in leaf area .pdf}
+}
+
 @article{smithShootStructuralEffects1988,
   title = {Shoot {{Structural Effects}} on {{Needle Temperatures}} and {{Photosynthesis}} in {{Conifers}}},
   author = {Smith, William K. and Carter, Gregory A.},
@@ -9189,6 +9207,23 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\3X6BR34D\\Tan et al. - 2017 - Optimum air temperature for tropical forest photos.pdf}
 }
 
+@article{taylorCapacityEmitIsoprene2019,
+  title = {The Capacity to Emit Isoprene Differentiates the Photosynthetic Temperature Responses of Tropical Plant Species},
+  author = {Taylor, Tyeen C. and Smith, Marielle N. and Slot, Martijn and Feeley, Kenneth J.},
+  date = {2019-08},
+  journaltitle = {Plant Cell Environ},
+  volume = {42},
+  number = {8},
+  pages = {2448--2457},
+  issn = {0140-7791, 1365-3040},
+  doi = {10.1111/pce.13564},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/pce.13564},
+  urldate = {2020-07-17},
+  abstract = {Experimental research shows that isoprene emission by plants can improve photosynthetic performance at high temperatures. But whether species that emit isoprene have higher thermal limits than non‐emitting species remains largely untested. Tropical plants are adapted to narrow temperature ranges and global warming could result in significant ecosystem restructuring due to small variations in species' thermal tolerances. We compared photosynthetic temperature responses of 26 co‐occurring tropical tree and liana species to test whether isoprene‐emitting species are more tolerant to high temperatures. We classified species as isoprene emitters versus non‐emitters based on published datasets. Maximum temperatures for net photosynthesis were \textasciitilde 1.8°C higher for isoprene‐emitting species than for non‐emitters, and thermal response curves were 24\% wider; differences in optimum temperatures (Topt) or photosynthetic rates at Topt were not significant. Modelling the carbon cost of isoprene emission, we show that even strong emission rates cause little reduction in the net carbon assimilation advantage over non‐emitters at supraoptimal temperatures. Isoprene emissions may alleviate biochemical limitations, which together with stomatal conductance, co‐limit photosynthesis above Topt. Our findings provide evidence that isoprene emission may be an adaptation to warmer thermal niches, and that emitting species may fare better under global warming than co‐occurring non‐emitting species.},
+  langid = {english},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\L33EQM7S\\Tyeen. C. Taylor et al. 2019.pdf}
+}
+
 @article{taylorCapacityEmitIsoprene2019a,
   title = {The Capacity to Emit Isoprene Differentiates the Photosynthetic Temperature Responses of Tropical Plant Species},
   author = {Taylor, Tyeen C. and Smith, Marielle N. and Slot, Martijn and Feeley, Kenneth J.},
@@ -9223,6 +9258,25 @@
   keywords = {climate change,global warming,isoprene emission,leaf biochemistry,photosynthetic temperature response,plant functional traits,thermal tolerance,tropical forest},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/pce.13564},
   file = {C\:\\Users\\Me\\Zotero\\storage\\A729VXJP\\Taylor et al. - 2019 - The capacity to emit isoprene differentiates the p.pdf;C\:\\Users\\Me\\Zotero\\storage\\QSF6DIXL\\pce.html}
+}
+
+@article{taylorIsopreneEmissionStructures2018a,
+  title = {Isoprene Emission Structures Tropical Tree Biogeography and Community Assembly Responses to Climate},
+  author = {Taylor, Tyeen C. and McMahon, Sean M. and Smith, Marielle N. and Boyle, Brad and Violle, Cyrille and van Haren, Joost and Simova, Irena and Meir, Patrick and Ferreira, Leandro V. and de Camargo, Plinio B. and da Costa, Antonio C. L. and Enquist, Brian J. and Saleska, Scott R.},
+  date = {2018},
+  journaltitle = {New Phytologist},
+  volume = {220},
+  number = {2},
+  pages = {435--446},
+  issn = {1469-8137},
+  doi = {10.1111/nph.15304},
+  url = {https://nph.onlinelibrary.wiley.com/doi/abs/10.1111/nph.15304},
+  urldate = {2021-08-05},
+  abstract = {The prediction of vegetation responses to climate requires a knowledge of how climate-sensitive plant traits mediate not only the responses of individual plants, but also shifts in the species and functional compositions of whole communities. The emission of isoprene gas – a trait shared by one-third of tree species – is known to protect leaf biochemistry under climatic stress. Here, we test the hypothesis that isoprene emission shapes tree species compositions in tropical forests by enhancing the tolerance of emitting trees to heat and drought. Using forest inventory data, we estimated the proportional abundance of isoprene-emitting trees (pIE) at 103 lowland tropical sites. We also quantified the temporal composition shifts in three tropical forests – two natural and one artificial – subjected to either anomalous warming or drought. Across the landscape, pIE increased with site mean annual temperature, but decreased with dry season length. Through time, pIE strongly increased under high temperatures, and moderately increased following drought. Our analysis shows that isoprene emission is a key plant trait determining species responses to climate. For species adapted to seasonal dry periods, isoprene emission may tradeoff with alternative strategies, such as leaf deciduousness. Community selection for isoprene-emitting species is a potential mechanism for enhanced forest resilience to climatic change.},
+  langid = {english},
+  keywords = {climate feedback,drought,plant functional traits,plant secondary metabolism,thermotolerance,tree physiology,tropical forest,volatile organic compounds},
+  annotation = {\_eprint: https://nph.onlinelibrary.wiley.com/doi/pdf/10.1111/nph.15304},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\W465G4CZ\\Taylor et al. - 2018 - Isoprene emission structures tropical tree biogeog.pdf;C\:\\Users\\Me\\Zotero\\storage\\LXCYR29M\\nph.html}
 }
 
 @article{taylorNewFieldInstrument2021,
