changed temperature from k to c

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -417,7 +417,7 @@ Because most CBMs are spatially implicit within grid cells, direct and diffuse p
 - across vertical gradients, directional trends in biophysical environment and leaf traits are the rule, suggesting that the physiology and ecology that have these as their underpinnings should also vary
 - a number of studies confirm that this is the case.
 - However, when we ask the critical question of how the temperature sensitivities  of metabolism and woody growth varies across these different environments, we can't say much-- there are only a small number of studies, often showing insignificant differences or mixed results.
-- We lean towards the conclusion that while large canopy trees ware the most vulnerable to warming when combined with drought, understory trees may be more vulnerable under more mesic conditions, but more research is needed. 
+- We lean towards the conclusion that while large canopy trees are the most vulnerable to warming when water is limited, understory trees may be more vulnerable under more mesic conditions, but more research is needed. 
 - Critically, change to the vertical gradient--e.g., through increased mortality of canopy trees--will change processses across forest strata, with potentially dramatic consequences. (some of the literature on forest degredation or fragmentation could inform what happens when those gradients change)
 
 
